# transcription-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apple-speech-cli/: Package.swift
apple-speech-cli/Sources/SpeechCLI/: main.swift
skill/: SKILL.md
src/transcription_mcp/: audio.py  models.py  server.py  storage.py
src/transcription_mcp/apple-speech-cli/Sources/SpeechCLI/: main.swift
src/transcription_mcp/engines/: apple_engine.py
tests/: conftest.py  test_apple_engine.py  test_audio.py  test_e2e.py  test_models.py  test_server.py  test_storage.py
tests/fixtures/: test_speech.m4a
