[project]
name = "transcription-mcp"
version = "1.0.0"
description = "Local transcription at 76x realtime using Apple SpeechAnalyzer. YouTube-ready SRT captions. Zero API costs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Kilo Loco", email = "kilo@kiloloco.com" },
]
keywords = [
    "transcription",
    "mcp",
    "speech-to-text",
    "apple",
    "neural-engine",
    "captions",
    "srt",
    "subtitles",
    "claude",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
]

[project.urls]
Homepage = "https://github.com/Kilo-Loco/transcription-mcp"
Repository = "https://github.com/Kilo-Loco/transcription-mcp"
Issues = "https://github.com/Kilo-Loco/transcription-mcp/issues"

[project.scripts]
transcription-mcp = "transcription_mcp.server:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
    "speechanalyzer: tests requiring macOS 26 + Apple SpeechAnalyzer (skipped in CI)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/transcription_mcp"]
artifacts = [
    "*.swift",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "apple-speech-cli/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
